--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a-asset-item id="stab" src="model/offtab.gltf"></a-asset-item>
             <a-asset-item id="stab" src="model/window.gltf"></a-asset-item>
         </a-assets>
-         <!--window><!-->
+         <!--window>
           <a-entity gltf-model="model/window.gltf" position="-30 3 -16.6" color="black" scale="3 3 3"> </a-entity>
           <a-entity gltf-model="model/window.gltf" position="-30 3 16.9" color="black" rotation="0 180 0" scale="3 3 3"> </a-entity>
           <a-entity gltf-model="model/window.gltf" position="0 3 -16.6" color="black" scale="3 3 3"> </a-entity>
@@ -34,7 +34,7 @@
           <a-entity gltf-model="model/window.gltf" position="-15 3 -16.6" color="black" scale="3 3 3"> </a-entity>
           <a-entity gltf-model="model/window.gltf" position="-15 3 16.9" color="black" rotation="0 180 0" scale="3 3 3"> </a-entity>
 
-          <!--tailortab><!-->
+          <!--tailortab>
           <a-entity gltf-model="model/stab.gltf" position="-50 0 11.09" color="black" rotation="0 90 0" scale="1.169 2 2"> </a-entity>
           <a-entity gltf-model="model/stab.gltf" position="-45 0 11.09" color="black" rotation="0 90 0" scale="1.169 2 2"> </a-entity>
           <a-entity gltf-model="model/stab.gltf" position="-40 0 11.09" color="black" rotation="0 90 0" scale="1.169 2 2"> </a-entity>
@@ -47,25 +47,25 @@
           <a-entity gltf-model="model/stab.gltf" position="-30 0 5.981" color="black" rotation="0 90 0" scale="1.169 2 2"> </a-entity>
 
 
-         <!--tailor><!-->
+         <!--tailor>
           <a-entity gltf-model="model/tailor.gltf" position="10 0 -10.51" color="black" scale="0.6 0.6 0.6" rotation="0 90 0"> </a-entity>
           <a-entity gltf-model="model/tailor.gltf" position="0 0 -10.51" color="black" scale="0.6 0.6 0.6" rotation="0 90 0"> </a-entity>
           <a-entity gltf-model="model/tailor.gltf" position="-10 0 -10.51" color="black" scale="0.6 0.6 0.6" rotation="0 90 0"> </a-entity>
           <a-entity gltf-model="model/tailor.gltf" position="-20 0 -10.51" color="black" scale="0.6 0.6 0.6" rotation="0 90 0"> </a-entity>
           <a-entity gltf-model="model/tailor.gltf" position="-30 0 -10.51" color="black" scale="0.6 0.6 0.6" rotation="0 90 0"> </a-entity>
 
-         <!--Rack><!-->
+         <!--Rack>
         <a-entity gltf-model="model/rack.gltf" position="10 0.75 -2" color="black" scale="1 1 1"> </a-entity>
         <a-entity gltf-model="model/rack.gltf" position="0 0.75 -2" color="black" scale="1 1 1"> </a-entity>
         <a-entity gltf-model="model/rack.gltf" position="-10 0.75 -2" color="black" scale="1 1 1"> </a-entity>
         <a-entity gltf-model="model/rack.gltf" position="-20 0.75 -2" color="black" scale="1 1 1"> </a-entity>
         <a-entity gltf-model="model/rack.gltf" position="-30 0.75 -2" color="black" scale="1 1 1"> </a-entity>
         
-         <!--Display table><!-->
+         <!--Display table>
         <a-entity gltf-model="model/table.gltf" position="30 0.75 7" color="black" scale="1.3 1 1.3"> </a-entity>
         <a-entity gltf-model="model/table.gltf" position="30 0.75 -4" color="black" scale="1.3 1 1.3"> </a-entity>
 
-         <!--table><!-->
+         <!--table>
         <a-entity gltf-model="model/table.gltf" position="10 0.756 10" color="black" rotation="0 90 0" scale="1.6 1 1"> </a-entity>
         <a-entity gltf-model="model/table.gltf" position="0 0.756 10" color="black" rotation="0 90 0" scale="1.6 1 1"> </a-entity>
         <a-entity gltf-model="model/table.gltf" position="-10 0.756 10" color="black" rotation="0 90 0" scale="1.6 1 1"> </a-entity>
