--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-      <!--<script src="https://aframe.io/releases/0.7.0/aframe.min.js"></script><!-->
+      <script src="https://aframe.io/releases/0.7.0/aframe.min.js"></script>
     <script src="js/aframe.min.js"></script>
     <script src="https://rawgit.com/imaya/zlib.js/develop/bin/inflate.min.js"></script>
     <script src="https://unpkg.com/aframe-animation-component@^4.1.2/dist/aframe-animation-component.min.js"></script>
