--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
     <a-scene>
         <a-assets >
             <img id="sky" src="360/1.jpg">
-            <a-asset-item id="spst" src="model/table.gltf"></a-asset-item>
+          <!-->  <a-asset-item id="spst" src="model/table.gltf"></a-asset-item>
             <a-asset-item id="tail" src="model/tailor.gltf"></a-asset-item>
             <a-asset-item id="shelf" src="model/steel rack.fbx"></a-asset-item>
             <a-asset-item id="offtab" src="model/offtab.gltf"></a-asset-item>
             <a-asset-item id="stab" src="model/offtab.gltf"></a-asset-item>
             <a-asset-item id="stab" src="model/window.gltf"></a-asset-item>
+<!--> 
         </a-assets>
          <!--window>
           <a-entity gltf-model="model/window.gltf" position="-30 3 -16.6" color="black" scale="3 3 3"> </a-entity>
